<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/textViewLoginTitle"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/localModeLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/localModeLoginButton"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/goToAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_login"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="16dp" />

</RelativeLayout>
